$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.138 2005/05/17 11:20:32 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------


Exim version 4.52
-----------------

TF/01 Added support for Client SMTP Authorization. See NewStuff for details.

PH/01 When a transport filter timed out in a pipe delivery, and the pipe
      command itself ended in error, the underlying message about the transport
      filter timeout was being overwritten with the pipe command error. Now the
      underlying error message should be appended to the second error message.

TK/01 Fix poll() being unavailable on Mac OSX 10.2.

PH/02 Reduce the amount of output that "make" produces by default. Full output
      can still be requested.

PH/03 The warning log line about a condition test deferring for a "warn" verb
      was being output only once per connection, rather than after each
      occurrence (because it was using the same function as for successful
      "warn" verbs). This seems wrong, so I have changed it.


Exim version 4.51
-----------------

TK/01 Added Yahoo DomainKeys support via libdomainkeys. See
      doc/experimental-spec.txt for details. (http://domainkeys.sf.net)

TK/02 Fix ACL "control" statement not being available in MIME ACL.

TK/03 Fix ACL "regex" condition not being available in MIME ACL.

PH/01 Installed a patch from the Sieve maintainer that allows -bf to be used
      to test Sieve filters that use "vacation".

PH/02 Installed a slightly modified version of Nikos Mavrogiannopoulos' patch
      that changes the way the GnuTLS parameters are stored in the cache file.
      The new format can be generated externally. For backward compatibility,
      if the data in the cache doesn't make sense, Exim assumes it has read an
      old-format file, and it generates new data and writes a new file. This
      means that you can't go back to an older release without removing the
      file.
