@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.138 2005/05/17 11:20:32 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.139 2005/05/17 15:00:04 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -23,6 +23,15 @@ PH/03 The warning log line about a condition test deferring for a "warn" verb
       was being output only once per connection, rather than after each
       occurrence (because it was using the same function as for successful
       "warn" verbs). This seems wrong, so I have changed it.
+
+TF/02 Two buglets in acl.c which caused Exim to read a few bytes of memory that
+      it should not have, which might have caused a crash in the right
+      circumstances, but probably never did.
+
+PH/04 Installed a modified version of Tony Finch's patch to make submission
+      mode fix the return path as well as the Sender: header line, and to
+      add a /name= option so that you can make the user's friendly name appear
+      in the header line.
 
 
 Exim version 4.51
